--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@google/genai": "^1.15.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "openai": "^5.15.0"
+    "openai": "^5.15.0",
+    "readline": "^1.3.0"
   }
 }
